@@ -2,8 +2,8 @@ Source: libdebian-installer
 Section: libs
 Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
-Uploaders: David Kimdon <dwhedon@debian.org>, Tollef Fog Heen <tfheen@debian.org>, Martin Sjogren <sjogren@debian.org>, Bastian Blank <waldi@debian.org>, Joey Hess <joeyh@debian.org>
-Build-Depends: debhelper (>= 4), di-packages-build (>= 0.5), autotools-dev, doxygen
+Uploaders: Bastian Blank <waldi@debian.org>, Joey Hess <joeyh@debian.org>
+Build-Depends: debhelper (>= 4.2.0), autotools-dev, doxygen
 Standards-Version: 3.6.0
 
 Package: libdebian-installer4
