@@ -80,8 +80,8 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_di_installchangelogs
-	dh_di_installdocs
+	dh_installchangelogs
+	dh_installdocs
 #	dh_installexamples
 #	dh_installmenu
 #	dh_installdebconf	
@@ -99,13 +99,13 @@ binary-arch: build install
 	dh_fixperms
 #	dh_perl
 #	d_python
-	dh_di_makeshlibs -n -V
+	dh_makeshlibs -n -V
 	dh_installdeb
 	dh_shlibdeps -N libdebian-installer-extra4 -N libdebian-installer-extra4-udeb
 	dh_shlibdeps -p libdebian-installer-extra4 -p libdebian-installer-extra4-udeb -- -L$(CURDIR)/debian/libdebian-installer-extra4.shlibs.local
-	dh_di_gencontrol
-	dh_di_md5sums
-	dh_di_builddeb
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install 
