@@ -7,6 +7,7 @@ libdebian-installer (0.22.unreleased) UNRELEASED; urgency=low
     - Mark the old Kernel-Version resolver as deprecated.
     - Remove backward compatiblity from dependency resolver.
     - Remove two undocumented symbols.
+    - Use debhelper udeb support.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 25 Apr 2004 11:34:31 +0200
 
